Added service catalogue name as a Workbench property.

--- a/src/main/resources/conf/workbench-profile.properties
+++ b/src/main/resources/conf/workbench-profile.properties
@@ -1,3 +1,4 @@
 servicecatalogue.base.url=https://www.biocatalogue.org
+servicecatalogue.name=BioCatalogue
 myexperiment.base.url=http://www.myexperiment.org
 myexperiment.starterpack=254
