--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
         <parent>
                 <groupId>net.sf.taverna</groupId>
                 <artifactId>taverna-parent</artifactId>
-                <version>2.5-SNAPSHOT</version>
+                <version>2.5.0</version>
         </parent>
         <groupId>net.sf.taverna.t2.taverna-workbench</groupId>
 	<artifactId>taverna-workbench-${edition}</artifactId>
@@ -671,6 +671,84 @@
 <!--
 
 				-->
+
+                                <artifactItem>
+                                    <groupId>com.fasterxml.jackson.core</groupId>
+                                    <artifactId>jackson-core</artifactId>
+                                    <version>2.3.1</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/com/fasterxml/jackson/core/jackson-core/2.3.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.fasterxml.jackson.core</groupId>
+                                    <artifactId>jackson-core</artifactId>
+                                    <version>2.3.1</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/com/fasterxml/jackson/core/jackson-core/2.3.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.fasterxml.jackson.core</groupId>
+                                    <artifactId>jackson-databind</artifactId>
+                                    <version>2.3.1</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/com/fasterxml/jackson/core/jackson-databind/2.3.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.fasterxml.jackson.core</groupId>
+                                    <artifactId>jackson-databind</artifactId>
+                                    <version>2.3.1</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/com/fasterxml/jackson/core/jackson-databind/2.3.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.fasterxml.jackson.core</groupId>
+                                    <artifactId>jackson-annotations</artifactId>
+                                    <version>2.3.0</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/com/fasterxml/jackson/core/jackson-annotations/2.3.0</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.fasterxml.jackson.core</groupId>
+                                    <artifactId>jackson-annotations</artifactId>
+                                    <version>2.3.0</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/com/fasterxml/jackson/core/jackson-annotations/2.3.0</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.fasterxml.jackson.core</groupId>
+                                    <artifactId>jackson-annotations</artifactId>
+                                    <version>2.3.1</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/com/fasterxml/jackson/core/jackson-annotations/2.3.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.fasterxml.jackson.core</groupId>
+                                    <artifactId>jackson-annotations</artifactId>
+                                    <version>2.3.1</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/com/fasterxml/jackson/core/jackson-annotations/2.3.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.fasterxml</groupId>
+                                    <artifactId>oss-parent</artifactId>
+                                    <version>12</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/com/fasterxml/oss-parent/12</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.slf4j</groupId>
+                                    <artifactId>slf4j-api</artifactId>
+                                    <version>1.6.4</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/slf4j/slf4j-api/1.6.4</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.slf4j</groupId>
+                                    <artifactId>slf4j-api</artifactId>
+                                    <version>1.6.4</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/slf4j/slf4j-api/1.6.4</outputDirectory>
+                                </artifactItem>
 
                                 <artifactItem>
                                     <groupId>xom</groupId>
