--- a/pom.xml
+++ b/pom.xml
@@ -672,6 +672,189 @@
 
 				-->
 
+
+                                <artifactItem>
+                                    <groupId>com.github.lookfirst</groupId>
+                                    <artifactId>sardine</artifactId>
+                                    <version>5.0_1_6</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/com/github/lookfirst/sardine/5.0_1_6</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.github.lookfirst</groupId>
+                                    <artifactId>sardine</artifactId>
+                                    <version>5.0_1_6</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/com/github/lookfirst/sardine/5.0_1_6</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>commons-codec</groupId>
+                                    <artifactId>commons-codec</artifactId>
+                                    <version>1.8</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/commons-codec/commons-codec/1.8</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>commons-codec</groupId>
+                                    <artifactId>commons-codec</artifactId>
+                                    <version>1.8</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/commons-codec/commons-codec/1.8</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>commons-codec</groupId>
+                                    <artifactId>commons-codec</artifactId>
+                                    <version>1.7</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/commons-codec/commons-codec/1.7</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>commons-codec</groupId>
+                                    <artifactId>commons-codec</artifactId>
+                                    <version>1.7</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/commons-codec/commons-codec/1.7</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>commons-logging</groupId>
+                                    <artifactId>commons-logging</artifactId>
+                                    <version>1.1.3</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/commons-logging/commons-logging/1.1.3</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>commons-logging</groupId>
+                                    <artifactId>commons-logging</artifactId>
+                                    <version>1.1.3</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/commons-logging/commons-logging/1.1.3</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>commons-logging</groupId>
+                                    <artifactId>commons-logging</artifactId>
+                                    <version>1.1.2</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/commons-logging/commons-logging/1.1.2</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>commons-logging</groupId>
+                                    <artifactId>commons-logging</artifactId>
+                                    <version>1.1.2</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/commons-logging/commons-logging/1.1.2</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>project</artifactId>
+                                    <version>4.0</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/project/4.0</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>project</artifactId>
+                                    <version>7</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/project/7</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>httpcomponents-core</artifactId>
+                                    <version>4.3.1</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/httpcomponents-core/4.3.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>httpcomponents-core</artifactId>
+                                    <version>4.0.1</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/httpcomponents-core/4.0.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>httpcomponents-client</artifactId>
+                                    <version>4.0.1</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/httpcomponents-client/4.0.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>httpcomponents-client</artifactId>
+                                    <version>4.3.2</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/httpcomponents-client/4.3.2</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>httpclient</artifactId>
+                                    <version>4.0.1</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/httpclient/4.0.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>httpclient</artifactId>
+                                    <version>4.0.1</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/httpclient/4.0.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>httpclient</artifactId>
+                                    <version>4.3.2</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/httpclient/4.3.2</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>httpclient</artifactId>
+                                    <version>4.3.2</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/httpclient/4.3.2</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>httpcore</artifactId>
+                                    <version>4.3.1</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/httpcore/4.3.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>httpcore</artifactId>
+                                    <version>4.3.1</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/httpcore/4.3.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>httpcore</artifactId>
+                                    <version>4.0.1</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/httpcore/4.0.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.httpcomponents</groupId>
+                                    <artifactId>httpcore</artifactId>
+                                    <version>4.0.1</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/httpcomponents/httpcore/4.0.1</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.commons</groupId>
+                                    <artifactId>commons-parent</artifactId>
+                                    <version>28</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/commons/commons-parent/28</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.commons</groupId>
+                                    <artifactId>commons-parent</artifactId>
+                                    <version>26</version>
+                                    <type>pom</type>
+                                    <outputDirectory>${project.build.directory}/repository/org/apache/commons/commons-parent/26</outputDirectory>
+                                </artifactItem>
                                 <artifactItem>
                                     <groupId>com.fasterxml.jackson.core</groupId>
                                     <artifactId>jackson-core</artifactId>
