--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         </parent>
         <groupId>net.sf.taverna.t2.taverna-workbench</groupId>
 	<artifactId>taverna-workbench-${edition}</artifactId>
-	<name>Taverna Workbench [${edition}]</name>
+	<name>Taverna Workbench Biodiversity</name>
 
         <properties>
 		<edition>biodiversity</edition>
