--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<raven.app.name>taverna-${edition}-${project.version}-${buildNumber}</raven.app.name>
                 <m2Repository />
 		<astrotaverna.version>1.20</astrotaverna.version>
-		<helio.version>0.2.1</helio.version>
+		<helio.version>0.2.1-SNAPSHOT</helio.version>
         </properties>
         <profiles>
                 <profile>
