--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
                 <m2Repository />
 		<astrotaverna.version>1.20</astrotaverna.version>
 		<helio.version>0.2.1</helio.version>
+		<vamdc.version>1.0</vamdc.version>
         </properties>
         <profiles>
                 <profile>
@@ -647,6 +648,26 @@
 			<groupId>org.helio.taverna</groupId>
 			<artifactId>helio-activity-ui</artifactId>
 			<version>${helio.version}</version>
+                        <scope>test</scope>
+		</dependency>
+
+		<!-- vamdc -->
+		<dependency>
+			<groupId>org.vamdc.taverna</groupId>
+			<artifactId>vamdc-activity</artifactId>
+			<version>${vamdc.version}</version>
+                        <scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.vamdc.taverna</groupId>
+			<artifactId>vamdc-common</artifactId>
+			<version>${vamdc.version}</version>
+                        <scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.vamdc.taverna</groupId>
+			<artifactId>vamdc-activity-ui</artifactId>
+			<version>${vamdc.version}</version>
                         <scope>test</scope>
 		</dependency>
 
@@ -2260,29 +2281,38 @@
                     <url>http://repo.aduna-software.org/maven2/releases</url>
                 </repository>
                 <repository>
-                    <releases>
-                        <enabled>true</enabled>
-                    </releases>
-                    <snapshots>
-                        <enabled>true</enabled>
-                    </snapshots>
                     <id>astrotaverna</id>
                     <name>Astrotaverna repository</name>
 		    <url>http://wf4ever.github.com/astrotaverna</url>
-                </repository>
-                <repository>
                     <releases>
                         <enabled>true</enabled>
                     </releases>
                     <snapshots>
                         <enabled>true</enabled>
                     </snapshots>
+                </repository>
+                <repository>
                     <id>helio</id>
                     <name>Helio Taverna repository</name>
 		    <url>http://msslkz.mssl.ucl.ac.uk/helio_taverna/helio_repository/</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
                 </repository>
-
-		
+                <repository>
+                    <id>vamdc</id>
+                    <name>VAMDC Taverna repository</name>
+		    <url>http://vamdc.mssl.ucl.ac.uk/vamdc_repository/</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+			    <enabled>false</enabled>
+                    </snapshots>
+                </repository>
 
         </repositories>
 	<scm>
