Changed app.title property in raven launcher to use capital first letter in each word.

--- a/src/main/resources/conf/raven-launcher.properties
+++ b/src/main/resources/conf/raven-launcher.properties
@@ -1,5 +1,5 @@
 raven.launcher.use_raven=true
 raven.launcher.show_splashscreen=true
 raven.launcher.app.name=${raven.app.name}
-raven.launcher.app.title=Taverna Workbench ${edition} ${project.version}
+raven.launcher.app.title=${project.name} ${project.version}
 raven.launcher.app.main=net.sf.taverna.t2.workbench.ui.impl.WorkbenchLauncher
