--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
         <properties>
 		<edition>astronomy</edition>
-		<raven.app.name>taverna-${edition}-${project.version}-${buildNumber}</raven.app.name>
+		<raven.app.name>taverna-workbench-${edition}-${project.version}-${buildNumber}</raven.app.name>
                 <m2Repository />
 		<astrotaverna.version>1.20</astrotaverna.version>
 		<helio.version>0.2.1</helio.version>
