--- a/pom.xml
+++ b/pom.xml
@@ -2134,8 +2134,12 @@
                     </snapshots>
                     <id>aduna-opensource.releases</id>
                     <name>Aduna Open Source - Maven releases</name>
+<!--
                     <url>http://repo.aduna-software.org/maven2/releases</url>
+-->
+                        <url>http://build.mygrid.org.uk/maven/aduna</url>
                 </repository>
+
 
         </repositories>
 	<scm>
