fixed aduna-repository section

--- a/pom.xml
+++ b/pom.xml
@@ -2567,18 +2567,32 @@
                         <snapshots />
                 </repository>
                 <repository>
+                    <id>aduna-software</id>
+                    <name>Aduna Open Source - Maven releases</name>
+<!--
+                    <url>http://repo.aduna-software.org/maven2/releases</url>
+-->
+                        <url>http://build.mygrid.org.uk/maven/aduna</url>
                     <releases>
                         <enabled>true</enabled>
                     </releases>
                     <snapshots>
                         <enabled>false</enabled>
                     </snapshots>
+                </repository>
+                <repository>
                     <id>aduna-opensource.releases</id>
                     <name>Aduna Open Source - Maven releases</name>
 <!--
                     <url>http://repo.aduna-software.org/maven2/releases</url>
 -->
                         <url>http://build.mygrid.org.uk/maven/aduna</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
                 </repository>
                 <repository>
                     <id>astrotaverna</id>
@@ -2612,13 +2626,6 @@
                     <snapshots>
 			    <enabled>false</enabled>
                     </snapshots>
-                </repository>
-                    <id>aduna-software</id>
-                    <name>Aduna Open Source - Maven releases</name>
-<!--
-                    <url>http://repo.aduna-software.org/maven2/releases</url>
--->
-                        <url>http://build.mygrid.org.uk/maven/aduna</url>
                 </repository>
         </repositories>
 	<scm>
