--- a/pom.xml
+++ b/pom.xml
@@ -816,6 +816,7 @@
                                     <type>pom</type>
                                     <outputDirectory>${project.build.directory}/repository/com/sun/xml/bind/jaxb-impl/2.1.8</outputDirectory>
                                 </artifactItem>
+                                <!--
                                 <artifactItem>
                                     <groupId>com.sun.jdmk</groupId>
                                     <artifactId>jmxtools</artifactId>
@@ -843,7 +844,7 @@
                                     <version>1.2.1</version>
                                     <type>jar</type>
                                     <outputDirectory>${project.build.directory}/repository/com/sun/jmx/jmxri/1.2.1</outputDirectory>
-                                </artifactItem>
+                                </artifactItem>-->
                                 <artifactItem>
                                     <groupId>xerces</groupId>
                                     <artifactId>xerces</artifactId>
