--- a/pom.xml
+++ b/pom.xml
@@ -673,12 +673,10 @@
 			<artifactId>httpcore-osgi</artifactId>
 			<version>4.2.5</version>
 		</dependency>
-		<!-- Jena bundle needed by jsonld-java-jena -->
-		<!-- See https://github.com/stain/jena/tree/jena-bundle/jena-bundle -->
 		<dependency>
 			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-bundle</artifactId>
-			<version>2.11.0-SNAPSHOT</version>
+			<artifactId>jena-osgi</artifactId>
+      <version>${jena.version}</version>
 		</dependency>
 		<!-- slf4j implementation -->
 		<dependency>
